--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,24 @@
   <title>Frontend DevEnv</title>
 </head>
 <body>
-
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-lg-6">
+        <div class="container">
+          <h1>Year</h1>
+          <ul id="yList">
+            <li>2018</li>
+            <li>2019</li>
+          </ul>
+        </div>
+        <div class="container">
+          <h1>Month</h1>
+          <table id="monthTable"></table>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-6">Col - 2</div>
+    </div>
+  </div>
   <script src="./js/main.js"></script>
 </body>
 </html>
