Add monthView table

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,9 @@
           <table id="monthTable"></table>
         </div>
       </div>
-      <div class="col-md-6 col-lg-6">Col - 2</div>
+      <div class="col-md-6 col-lg-6">
+        <table id="monthView"></table>
+      </div>
     </div>
   </div>
   <script src="./js/main.js"></script>
