House monthView table in a container

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,9 @@
         </div>
       </div>
       <div class="col-md-6 col-lg-6">
-        <table id="monthView"></table>
+        <div class="container">
+            <table id="monthView"></table>
+        </div>
       </div>
     </div>
   </div>
