--- a/src/index.html
+++ b/src/index.html
@@ -11,21 +11,20 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-lg-6">
-        <div class="container">
+        <div id="left-container" class="container">
           <h1>Year</h1>
           <ul id="yList">
             <li>2018</li>
             <li>2019</li>
           </ul>
-        </div>
-        <div class="container">
           <h1>Month</h1>
           <table id="monthTable"></table>
         </div>
       </div>
       <div class="col-md-6 col-lg-6">
         <div class="container">
-            <table id="monthView"></table>
+          <h1>Day</h1>
+          <table id="monthView"></table>
         </div>
       </div>
     </div>
