--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 col-lg-6">
-        <div id="left-container" class="container">
+        <div class="container">
           <h1>Year</h1>
           <ul id="yList">
             <li>2018</li>
@@ -29,6 +29,7 @@
       </div>
     </div>
   </div>
+  <script src="./js/methods.js"></script>
   <script src="./js/main.js"></script>
 </body>
 </html>
