--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-md-6 col-lg-6">
-        <div class="container">
+      <div class="col-md-6 col-lg-6 col-sm-12">
+        <div id="left-container" class="container">
           <h1>Year</h1>
           <ul id="yList">
             <li>2018</li>
@@ -21,8 +21,9 @@
           <table id="monthTable"></table>
         </div>
       </div>
-      <div class="col-md-6 col-lg-6">
-        <div class="container">
+      <div id="vl" class="col-md-1 col-lg-1"></div>
+      <div class="col-md-5 col-lg-5">
+        <div id="right-container" class="container">
           <h1>Day</h1>
           <table id="monthView"></table>
         </div>
